Implemented new integrated device system based on peripheral instead of port name
Summary of changes
- integrated device's port can have arbitrarily name
- controller can define some ports to be used exclusively by integrated device (port type = INTERNAL) or share between integrated and external device (leave port type as is)